fix [#36256] Checker Deselect, failed with de-selected active face.